grammar.js
    source_file: ($) =>
      seq(
        optional(choice($._bom, $.shebang)),
        choice($.module_def, repeat($._declaration)),
        optional(seq($.end_file, $._after_eof)),
      ),

    _bom: (_$) => token.immediate("\uFEFF"), // kind of like a special form of whitespace
    identifier: (_$) => /[_\p{XID_Start}][\p{XID_Continue}]*/,

    //
    // Token String
    //
    char: (_$) => token("char"),
    int: (_$) => token("int"),
    string: (_$) => token("string"),
    enum: (_$) => "enum",
    for: (_$) => token("for"),
    foreach: (_$) => token("foreach"),
    foreach_reverse: (_$) => token("foreach_reverse"),
    scope: (_$) => token("scope"),
    _declaration: ($) =>
      choice(
        seq($._declaration2),
        // seq(repeat1($._attribute), $._declaration2),
        seq(repeat1($._attribute), "{", repeat($._declaration), "}"),
      ),

    variable_declaration: ($) =>
      seq(
        repeat($._attribute),
        repeat($.storage_class),
        $.type,
        commaSep1(choice($.declarator, $.bitfield_declarator)),
        ";",
      ),

    declarator: ($) =>
      prec.right(
        seq(
          $.identifier,
          optional(seq(optional($.template_parameters), "=", $._initializer)),
        ),
      ),

    _initializer: ($) => prec.left(choice($._non_void_initializer, $.void)),

    type: ($) =>
      prec.right(seq(repeat($.type_ctor), $._type2, repeat($._type_suffix))),

    _type2: ($) =>
      prec.right(
        choice(
          $.void,
          $._builtin_type,
          $._qualified_id,
          seq(".", $._qualified_id),
          $.typeof_expression,
          seq($.typeof_expression, ".", $._qualified_id),
          seq($.type_ctor, "(", $.type, ")"),
          $.vector_type,
          $.traits_expression,
          $.mixin_expression,
        ),
      ),

    // dparse says the type is optional, but that seems nonsensical.
    void: (_$) => "void",

    _type_suffix: ($) =>
      prec.right(
        choice(
          "*",
          seq("[", "]"),
          seq("[", $.expression, "]"),
          seq("[", $.expression, "..", $.expression, "]"),
          seq("[", $.type, "]"),
          seq($.delegate, $.parameters, repeat($.member_function_attribute)),
          seq($.function, $.parameters, repeat($._function_attribute)),
        ),
      ),

    _attribute: ($) =>
      prec.right(
        choice(
          $.linkage_attribute,
          $.align_attribute,
          $.deprecated_attribute,
          $.pragma_expression,
          $.type_ctor,
          $.private,
          $.package,
          seq($.package, "(", $.module_fqn, ")"),
          $.protected,
          $.public,
          $.export,
          $.static,
          $.extern,
          $.abstract,
          $.final,
          $.override,
          $.synchronized,
          $.auto,
          $.scope,
          $.gshared,
          $.at_attribute,
          $._function_attribute_kwd,
          $.ref,
          $.return,
        ),
      ),

    at_attribute: ($) =>
      prec.right(
        choice(
          seq("@", $.identifier),
          seq("@", $.identifier, $.arguments),
          seq("@", $.template_instance),
          seq("@", $.template_instance, $.arguments),
          seq("@", "(", $._argument_list, ")"),
        ),
      ),

    _argument_list: ($) => prec.right(commaSep1Comma($.expression)),

    expression_list: ($) => prec.right(commaSep1($._expr)),

    // formally this is AssignExpression, but we use a different
    // structure.  This is just a single expression term, and
    // cannot be used in a comma expression. Expression is
    // used where comma separated expressions are valid.
    //
    // The formal D grammar permits expression lists in many places,
    // but then the compiler rejects almost any attempt to use them.
    // We are electing to reject these in the syntax, rather than
    // in the semantic.  This makes our grammar simpler, and has
    // zero effect on any actual legal code.
    expression: ($) => $._expr,
    _expr: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.ternary_expression,
          $.binary_expression,
          $.ternary_expression,
          $._unary_expr,
        ),
      ),

    assignment_expression: ($) =>
      prec.right(
        -1,
        binaryOp(
          $._expr,
          choice(
            "=",
            "+=",
            "-=",
            "*=",
            "/=",
            "%=",
            "&=",
            "|=",
            "^=",
            "~=",
            "<<=",
            ">>=",
            ">>>=",
            "^^=",
          ),
          $._expr,
        ),
      ),

    binary_expression: ($) =>
      choice(
        $.logical_or_expression,
        $.logical_and_expression,
        $.or_expression,
        $.xor_expression,
        $.and_expression,
        $.equal_expression,
        $.rel_expression,
        $.identity_expression,
        $.add_expression,
        $.mul_expression,
        $.shift_expression,
        $.power_expression,
      ),

    equal_expression: ($) =>
      prec.left("compare", binaryOp($._expr, choice("==", "!="), $._expr)),

    rel_expression: ($) =>
      prec.left(
        "compare",
        binaryOp($._expr, choice("<=", "<", ">", ">="), $._expr),
      ),

    mul_expression: ($) =>
      prec.left("multiply", binaryOp($._expr, choice("*", "/", "%"), $._expr)),

    postfix_expression: ($) =>
      prec.left(seq($._unary_expr, field("operator", choice("++", "--")))),

    unary_expression: ($) =>
      prec.right(
        "unary",
        seq(
          field("operator", choice("~", "+", "-", "!", "*", "&", "++", "--")),
          $._unary_expr,
        ),
      ),

    _unary_expr: ($) =>
      choice(
        $._primary_expr,
        $.unary_expression,
        $.new_expression,
        $.delete_expression,
        $.assert_expression,
        $.cast_expression,
        $.throw_expression,
        $.call_expression,
        $.index_expression,
        $.postfix_expression,
        $.property_expression,
      ),

    quoted_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, /[^"\\]+/)),
            $.escape_sequence,
            $.htmlentity,
          ),
        ),
        token.immediate(/"[cdw]?/),
      ),

    // interpolated strings
    string_literal: ($) =>
      choice(
        $._string,
        $.raw_string,
        $.hex_string,
        $.quoted_string,
        $.token_string,
        $.interpolated_raw_string,
        $.interpolated_quoted_string,
        $.interpolated_token_string,
      ),

    _declarations_and_statements: ($) => repeat1($._declaration_or_statement),

    _declaration_or_statement: ($) => choice($._declaration, $._statement),

    scope_statement: ($) => $._declaration_or_statement,
    block_statement: ($) =>
      seq(
        "{",
        optional($._declarations_and_statements),
        optional($.label),
        "}",
      ),

    expression_statement: ($) => seq($.expression_list, ";"),

    for_statement: ($) =>
      seq(
        $.for,
        "(",
        $._for1,
        optional($._for2),
        optional(seq(";", optional($._for3))),
        ")",
        $.body,
      ),

    _for1: ($) =>
      choice(
        field("init", $._declaration2),
        field("init", $._statement_no_case_no_default),
        ";",
      ),
    _for2: ($) => field("test", $.expression),
    _for3: ($) => field("step", $.expression_list),

    //
    // Foreach Statement
    //

    _foreach: ($) => choice($.foreach, $.foreach_reverse),

    foreach_statement: ($) =>
      choice(
        seq(
          $._foreach,
          "(",
          commaSep1($.foreach_type),
          ";",
          $.expression,
          ")",
          $.body,
        ),
        seq(
          $._foreach,
          "(",
          $.foreach_type,
          ";",
          $.expression,
          "..",
          $.expression,
          ")",
          $.body,
        ),
      ),

    foreach_type: ($) =>
      seq(
        repeat(choice($.ref, $.alias, $.enum, $.scope, $.type_ctor)),
        optional($.type),
        $.identifier,
      ),

    //
    // Switch Statement
    //

    enum_declaration: ($) =>
      seq(
        repeat($._attribute),
        choice(
          seq($.enum, $.identifier, ";"),
          seq($.enum, $.identifier, $._enum_body),
          seq($.enum, $.identifier, ":", $.type, ";"),
          seq($.enum, $.identifier, ":", $.type, $._enum_body),
        ),
      ),

    _enum_body: ($) => seq("{", commaSep1Comma($.enum_member), "}"),

    _enum_member_attribute: ($) =>
      choice($.deprecated_attribute, $.at_attribute),

    enum_member: ($) =>
      seq(
        repeat($._enum_member_attribute),
        $.identifier,
        optional(seq("=", $._expr)),
      ),

    anonymous_enum_declaration: ($) =>
      seq(
        repeat($._attribute),
        $.enum,
        optional(seq(":", $.type)),
        "{",
        commaSep1Comma(choice($.anonymous_enum_member, $.enum_member)),
        "}",
      ),

    anonymous_enum_member: ($) => seq($.type, $.identifier, "=", $._expr),

    /**************************************************
     *
     * 3.13 FUNCTIONS
     *
     */

    function_declaration: ($) =>
      seq(
        repeat($._attribute),
        prec.right(
          choice(
            seq(
              $.type,
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              $.type,
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.constraint),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.parameters,
              repeat($.member_function_attribute),
              $.function_body,
            ),
            seq(
              repeat1($.storage_class),
              $.identifier,
              $.template_parameters,
              $.parameters,
              repeat($.member_function_attribute),
              optional($.constraint),
              $.function_body,
            ),
          ),
        ),
      ),

    //
    // Parameters
    //
    parameters: ($) =>
      prec.right(
        choice(
          seq("(", ")"),
          seq("(", commaSep1Comma($.parameter), ")"),
          seq("(", commaSep1($.parameter), ",", $.ellipses, ")"),
          seq(
            "(",
            commaSep1($.parameter),
            ",",
            $._variadic_arguments_attributes,
            $.ellipses,
            ")",
          ),
          seq("(", $.ellipses, ")"),
          seq("(", $._variadic_arguments_attributes, $.ellipses, ")"),
        ),
      ),

    _variadic_arguments_attributes: ($) =>
      repeat1($.variadic_arguments_attribute),

    function_body: ($) =>
      choice(
        seq(optional($._in_out_contract_expressions), "=>", $._expr, ";"),
        seq(repeat($._function_contract), optional($.do), $.block_statement),
        seq(repeat($._function_contract), ";"),
        seq(repeat($._function_contract), $._in_out_statement),
      ),

    _function_contract: ($) =>
      choice($._in_out_contract_expression, $._in_out_statement),

    _in_out_contract_expressions: ($) => repeat1($._in_out_contract_expression),

    _in_out_statement: ($) => choice($.in_statement, $.out_statement),
