test/corpus/expression.scm
==================
Division
==================
int x  = 5 / 3;
---

(source_file
  (variable_declaration
    (type
      (int))
    (declarator
      (identifier)
      (binary_expression
        (mul_expression
          (num_literal)
          (num_literal))))))
